src/test/ui/parser/recover-assoc-const-constraint.stderr
error: cannot constrain an associated constant to a value
  --> $DIR/recover-assoc-const-constraint.rs:3:11
   |
LL |     bar::<Item = 42>();
   |           ----^^^--
   |           |      |
   |           |      the value is given in this expression
   |           the value constrains this associated constant

error: cannot constrain an associated constant to a value
  --> $DIR/recover-assoc-const-constraint.rs:4:11
   |
LL |     bar::<Item = { 42 }>();
   |           ----^^^------
   |           |      |
   |           |      the value is given in this expression
   |           the value constrains this associated constant

error: aborting due to 2 previous errors

